# pulse

./: .travis.yml  LICENSE  README  README.md  pulse.cabal  runTestsAndCoverage.sh
Sound/: Pulse.hs
Sound/Pulse/: Async.hs  Internal.hs  Monad.hs  PropList.hs  Properties.hs  Volume.hs
Sound/Pulse/Internal/: C2HS.hs  ChannelMap.chs  Context.chs  Def.chs  Format.chs  Operation.chs  PropList.chs  Sample.chs  Volume.chs
Sound/Pulse/PropList/: Internal.hs  Quote.hs
Sound/Pulse/Properties/: Internal.hs
src/Sound/: Pulse.hs
src/Sound/Pulse/: Monad.hs  PropList.hs  Volume.hs
src/Sound/Pulse/Internal/: C2HS.hs  ChannelMap.chs  Context.chs  Def.chs  Format.chs  Introspect.chs  MainLoop.chs  MainLoopApi.chs  Operation.chs  PropList.chs  Sample.chs  ThreadedMainLoop.chs  TimeVal.chs  Version.hsc  Volume.chs
src/Sound/Pulse/Monad/: Internal.hs
src/Sound/Pulse/Monad/Internal/: Connection.hs  Introspect.hs  IntrospectTH.hs  MainLoop.hs
src/Sound/Pulse/PropList/: Internal.hs  Quote.hs
tests/: Test.hs  TestSuite.hs
tests/Sound/Pulse/Tests/: Monad.hs
travis-script/: launch-headless-pulseaudio.sh
