Name:                pulse
Version:             0.0.0.0
Synopsis:            Haskell binding to PulseAudio
Homepage:            http://favonia.github.com/pulse/
License:             BSD3
License-file:        LICENSE
Author:              Favonia, MnO2, Lin Jen-Shin (godfat)
Maintainer:          favonia@gmail.com, mno2.csie@gmail.com, godfat@godfat.org
Category:            Sound

Build-type:          Simple
Cabal-version:       >=1.10

Homepage:            http://favonia.github.com/pulse/
Bug-reports:         https://github.com/favonia/pulse/issues
Source-Repository    head
    Type: git
    Location: git@github.com:favonia/pulse.git

Library
    Default-language:
        Haskell2010
    Ghc-options:
        -Wall
    Hs-source-dirs:
        src
    Pkgconfig-depends:
        libpulse >= 1.0 && < 3.0
    Exposed-modules:
        Sound.Pulse
        Sound.Pulse.Monad
        Sound.Pulse.PropList
        Sound.Pulse.Volume
    Other-modules:
        Sound.Pulse.Internal.Def
        Sound.Pulse.Internal.TimeVal
        Sound.Pulse.Internal.MainLoopApi
        Sound.Pulse.Internal.MainLoop
        Sound.Pulse.Internal.Operation
        Sound.Pulse.Internal.PropList
        Sound.Pulse.Internal.Context
        Sound.Pulse.Internal.ChannelMap
        Sound.Pulse.Internal.Format
        Sound.Pulse.Internal.Sample
        Sound.Pulse.Internal.Version
        Sound.Pulse.Internal.Volume
        Sound.Pulse.Internal.Introspect
        Sound.Pulse.Internal.C2HS
        Sound.Pulse.PropList.Internal
        Sound.Pulse.Monad.Internal
        Sound.Pulse.Monad.Internal.MainLoop
        Sound.Pulse.Monad.Internal.Connection
        Sound.Pulse.Monad.Internal.Introspect
    Build-depends:
        base >= 4 && < 5,
        transformers >= 0.2 && < 0.4,
        MonadCatchIO-transformers >= 0.2 && < 0.4,
        stm == 2.4.*,
        -- TH 2.7.* is not buildable under GHC 7.2
        template-haskell >= 2.4 && < 2.8,
        dependent-map == 0.1.*,
        dependent-sum == 0.2.*,
        utf8-string == 0.3.*,
        bytestring == 0.9.*
    Build-tools:
        c2hs, hsc2hs

Test-suite test-pulse
    Default-language: Haskell2010
    Type: exitcode-stdio-1.0
    Ghc-options: -threaded
    Hs-source-dirs: tests
    Build-depends:
        base >= 4 && < 5,
        transformers >= 0.2 && < 0.4,
        QuickCheck == 2.4.*,
        pulse
    Main-is:
        Test.hs
